[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/float_moai.png" type="Texture" id=1]
[ext_resource path="res://FloatMoai.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -479, 2, 0, 0, 0, 0, 481, 2 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.5, 28.5 )

[node name="FloatMoai" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( -479, 2 )
rotate = false

[node name="KinematicBody2D" type="KinematicBody2D" parent="PathFollow2D"]
z_index = -1
collision_mask = 0

[node name="Sprite" type="Sprite" parent="PathFollow2D/KinematicBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/KinematicBody2D"]
position = Vector2( -0.5, 2.5 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
